# cfw-core

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  yamlSpec.md
docs/: cfw.md
include/: FreeRTOSConfig.h  gpio.h  i2c.h  matrix.h  pins.h  scancodes.h  serial.h  usb.h  usbconfig.h
src/cfw/: Makefile  main.c  matrix.c  rtosCallbacks.c  serial.c  usb.c
src/cfw/arch/megaAVR/: gpio.c  i2c.c
src/cfw/drivers/MCP23008/: mcp23008.c  mcp23008.h
src/cfw/protocols/usb/: vusb.c
utils/: pinGenerator.js
yaml-working/: .eslintignore  .prettierignore  keyboard.yaml  package.json
yaml-working/src/: main.ts  parseYaml.ts
yaml-working/src/yaml_schemas/: index.ts  keyboardSchema.ts
